added refresh command to update project files embedding